# Stratego_Berdij_Charret_Preys_Pillot

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  render.cpp  run_test.sh
rapport/: Makefile  ModeleRapport.odt  cmake_install.cmake
src/: ai.dia  client.dia  engine.dia  render.dia  server.dia  state.dia
src/client/: CMakeLists.txt  Makefile  PlayerController.cpp  ScenarioManager.cpp  cmake_install.cmake  main.cpp  main_clientNetwork.cpp  main_sfml.cpp
src/server/: CMakeLists.txt  main.cpp  main_clientNetwork.cpp
src/shared/: AllStates.cpp  Board.cpp  CMakeLists.txt  Engine.cpp  Game.cpp  Makefile  Pieces.cpp  Player.cpp  cmake_install.cmake  main.cpp  test_Board.cpp  test_Game.cpp  test_Pieces.cpp  test_Player.cpp
src/shared/ai/: AIInterface.cpp  AdvancedAI.cpp  HeuristicAI.cpp  RandomAI.cpp
src/shared/engine/: AllStates.cpp  Engine.cpp
src/shared/state/: AllStates.cpp  Board.cpp  Game.cpp  Pieces.cpp  Player.cpp  main.cpp  test_Board.cpp  test_Game.cpp  test_Pieces.cpp  test_Player.cpp  testboard  testgame  testplayer
src/shared/state/config/: Balance.csv  Defensive.csv  Offensive.csv  test.csv
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/client/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_AIController.cpp  test_HumanController.cpp  test_ScenarioManager.cpp  test_client_dummy
test/shared/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_Board.cpp  test_Engine.cpp  test_Game.cpp  test_HeuristicAI.cpp  test_HeuristicAI.txt  test_Pieces.cpp  (+5 more)
(+38 files in other folders)
